created scripts file to store commonly used backend scripts. currently has a post timestamp function to measure ms since unix date in 1970. added timestamp and post_id values to post document. added delet post buttont hat current doesnt do anything, and some more styling to UserPostHistory

--- a/src/components/UserPostHistory/index.css
+++ b/src/components/UserPostHistory/index.css
@@ -4,8 +4,7 @@
 
 .container {
     display: grid;
-    margin-left: 10%;
-    margin-right: 50%;
+    margin: 0 auto;
 }
 
 form {
@@ -13,4 +12,23 @@ form {
     grid-template-columns: 80px;
     grid-template-rows: auto auto auto auto auto;
     padding: 0;
+}
+
+
+ul {
+    list-style-type: none;
+}
+
+.search-results {
+    padding: 25px;
+    background-color: gray;
+    text-align: left;
+}
+
+.search-results .post-title {
+
+}
+
+.search-results .post-body {
+    
 }
