--- a/src/components/ComposeForm/index.css
+++ b/src/components/ComposeForm/index.css
@@ -42,6 +42,6 @@ form {
 }
 
 .submit {
-    border-radius: 8px;
-    background-color: white;
+    background-color: #e7e7e7; 
+    color: black;
 }
