--- a/src/components/UserPostHistory/index.css
+++ b/src/components/UserPostHistory/index.css
@@ -36,7 +36,8 @@ ul {
 }
 
 .submit-search {
-    width: 200px;
-    height: 25px;
-    border-radius: 8px;    
+    background-color: #e7e7e7; 
+    color: black;
+    width: 125px;
+    height: 25px;   
 }
