--- a/src/components/ComposeForm/index.css
+++ b/src/components/ComposeForm/index.css
@@ -44,4 +44,7 @@ form {
 .submit {
     background-color: #e7e7e7; 
     color: black;
+    width: 125px;
+    height: 25px;   
+    border-radius: 4px;
 }
