added featureless delete route for taking in post param ids. created deletepostbutton component to handle when a delete button is clicked on a specific post. this component is used in UserPostHistory

--- a/src/components/UserPostHistory/index.css
+++ b/src/components/UserPostHistory/index.css
@@ -44,3 +44,9 @@ ul {
     border-radius: 4px;
 
 }
+
+.title-timestamp {
+    display: grid;
+    grid-auto-columns: auto auto;
+    row-gap: 50px;
+}
