--- a/src/components/ComposeForm/index.css
+++ b/src/components/ComposeForm/index.css
@@ -17,7 +17,7 @@ form {
 
 .title {
     border: 0;
-    background-color: gray;
+    background-color:  rgb(83, 83, 83);
     border-radius: 4px;
     padding: 15px 5px 15px 5px;
     font-size: x-large;
@@ -28,7 +28,7 @@ form {
     width: 400px;
     height: 200px;
     border: 0;
-    background-color: gray;
+    background-color:  rgb(83, 83, 83);
     border-radius: 4px;
     padding: 15px 5px 15px 5px;
     font-size: large;
@@ -37,7 +37,7 @@ form {
 .username {
     margin-bottom: 15px;
     border: 0;
-    background-color: gray;
+    background-color:  rgb(83, 83, 83);
     border-radius: 4px;
 }
 
